tests/fixtures/negative/structure/EnumMinimumValuesMinValues4.cls
public enum TestEnum {
    VALUE1,
    VALUE2
}

